--- a/configs/sft_baseline.yaml
+++ b/configs/sft_baseline.yaml
@@ -10,7 +10,7 @@ model:
   name: meta-llama/Llama-3.2-1B-Instruct
   max_seq_length: 2048
   load_in_4bit: false
-  use_flash_attention: true
+  use_flash_attention: false
 
 train:
   method: sft
